добавление cookie для защиты незавершенных тренировок от изменений